--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,14 +1,11 @@
 .content
     width: 100%
-    height: 700px
     display: flex
     justify-content: center
-    overflow-y: auto
     .chats
         width: 570px
-        display: flex
-        flex-direction: column
-        justify-content: flex-end
+        max-height: 700px
+        overflow-y: auto
 .generation-form
     width: 100%
     display: flex
