--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -6,6 +6,7 @@
         width: 570px
         max-height: 700px
         overflow-y: auto
+        scroll-behavior: smooth
 .generation-form
     width: 100%
     display: flex
