:recycle: refactor: Altera como visualiza chat
 Altera de markdown para html

By: Pedro da Conceicao
Refs: #5

--- a/src/app/components/chat/chat.component.sass
+++ b/src/app/components/chat/chat.component.sass
@@ -5,7 +5,11 @@
     .text-input
         text-align: right
         background-color: gray
+        padding: 20px
+        border-radius: 10px
 
     .gemini-output
         text-align: left
         background-color: lightgray
+        padding: 20px
+        border-radius: 10px
