--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -2,6 +2,7 @@
     width: 100%
     display: flex
     justify-content: center
+    margin-top: 20px
     .chats
         width: 570px
         max-height: 700px
