:lipstick: feat: Add interpretador de markdown
By: Pedro Cardo
Refs: #6

--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -2,7 +2,9 @@
   <p class="text-input">{{ chat.text_input }}</p>
 
   @if (chat.gemini_output.length > 0) {
-  <p class="gemini-output" [innerHTML]="chat.gemini_output"></p>
+  <markdown class="gemini-output">
+    {{ chat.gemini_output }}
+  </markdown>
   } @else {
   <ngx-skeleton-loader count="3"></ngx-skeleton-loader>
   }
