:lipstick: feat: Add quebra textos longos
By: Pedro Cardo

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -13,5 +13,6 @@
     display: flex
     justify-content: center
     flex: 1
+    margin-top: 20px
     .generation-full-width
         max-width: 300px
